refactor(java): simplify method implementations and enhance readability